--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,6 +28,6 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-north-1
+          AWS_REGION: us-east-1
         run: |
-          aws s3 sync ./build s3://deploy-ci --delete
+          aws s3 sync ./build s3://deploy-ci   --delete
